# config/response.status.js
@@ -32,4 +32,7 @@ export const status = {
   // store err
   STORE_ALREADY_EXIST: { status: StatusCodes.BAD_REQUEST, isSuccess: false, code: "STORE4001", message: "이미 가게가 존재합니다." },
   STORE_NOT_EXIST: { status: StatusCodes.NOT_FOUND, isSuccess: false, code: "STORE4002", message: "리뷰를 작성하려는 가게가 없습니다." },
+
+  // mission err
+  MISSION_ALREADY_DOING_EXIST: { status: StatusCodes.BAD_REQUEST, isSuccess: false, code: "MISSION4001", message: "이미 미션을 진행하고 있거나 완료했습니다." },
 };
