# src/dtos/user.dto.js
@@ -6,3 +6,8 @@ export const signinResponseDTO = (user, prefer) => {
   }
   return { email: user[0].email, name: user[0].name, preferCategory: preferFood };
 };
+
+// add do mission response DTO
+export const adddomissionResponseDTO = (domission) => {
+  return { member_id: domission[0].member_id, mission_id: domission[0].mission_id, status: domission[0].status };
+};
