# src/routes/user.route.js
@@ -1,8 +1,9 @@
 import express from "express";
 import asyncHandler from "express-async-handler";
 
-import { userSignin } from "../controllers/user.controller.js";
+import { userSignin, userDoMission } from "../controllers/user.controller.js";
 
 export const userRouter = express.Router();
 
 userRouter.post("/signin", asyncHandler(userSignin));
+userRouter.post("/doMission", asyncHandler(userDoMission));
